# webrtc_snippets

./: .gitignore  CMakeLists.txt  README.md  webrtc_primer.cpp
apprtc/: fabfile.py
asr/: AudioRecorder.vue  README.md  const.py  iat_ws_python3.py  main.py  requirement.txt
asr/web-audio-app/: package-lock.json  package.json
audio/: CMakeLists.txt  audio_red_example.cpp  jitter_buffer_example.cpp
congestion_control/: CMakeLists.txt  README.md  webrtc-src
congestion_control/.ipynb_checkpoints/: kalman_demo-checkpoint.ipynb
congestion_control/inc/: estimator.h
datachannel/: CMakeLists.txt  README.md  cert.pem  dc_test.py  dcsctp_example.cpp  fabfile.py  key.pem  tls_sample.pcap  tls_test.py
docker/: Dockerfile  README.md  build.sh  install_deps.sh  run.sh  start.sh
gstreamer/: CMakeLists.txt
gstreamer/tutorial/: CMakeLists.txt
image/: extract_url.py  requirements.txt
janus/: fabfile.py
openssl/: CMakeLists.txt  README.md  dtls.json  dtls_analyze.py  dtls_example.cpp  key.pem  server.pem  simple_tls_server.cpp  tls_client.cpp  tls_server.cpp
webrtc_cc/: CMakeLists.txt  README.md  lsm.ipynb  webrtc-src
webrtc_cc/src/: waltertest.cpp
webrtc_cc/test/: estimator_test.cpp  unit_test.cpp
webrtc_src/: webrtc.gni
webrtc_src/examples/peerconnection/client/: conductor.cc  conductor.h  main.cc
webscript/: README.md  fabfile.py  jest.config.js  package-lock.json  package.json  tsconfig.json  typedoc.json
webscript/src/: hello.ts  utils.ts
zmq/: CMakeLists.txt  README.md  zmq_client.cpp  zmq_client.py  zmq_server.py
